# data-structures-algorithms

./: .gitignore  README.md
a-star/: CMakeLists.txt  README.md  algorithm.cpp  main.cpp  makefile  puzzle.cpp  puzzle.h
backtracking/: makefile  n-queens.cpp  sudoku-solver.cpp
dp/: climbing-stairs.cpp  coin-change-ii.cpp  coin-change.cpp  unique-paths.cpp  word-break.cpp
graph/: minimum-genetic-mutation.cpp  output.txt  snakeAndLadders.cpp
stack-queue/: basic_calculator.cpp  evaluate-reverse-polish-notation.cpp
tools/: play_pause.py  quick_sort_manim.py
trees/: binary_tree.h  delete-node-in-a-bst.cpp  is_balanced_tree.cpp  max_tree_path.cpp  path-sum.cpp  recursive-traversal.cpp
trie/: add_search_word.cpp  trie-wordsearch.cpp  trie.cpp
