cmake_minimum_required(VERSION 3.0)
project(puzzle)
#file(GLOB SOURCE "*.c")
#aux_source_directory(. SRC_LIST)
set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
set(SOURCE algorithm.cpp graphics.cpp puzzle.cpp main.cpp)
add_executable(${PROJECT_NAME} ${SOURCE})